# streamlit_sample

./: .env  .gitignore  app.py  database.sqlite3  docker-compose.yml  model.py  pyproject.toml  settings.py  stream_app.py  streamlit_utility.py
migrations/: env.py
pages/: group_manager.py  sample_page.py
